<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".GameSettingsPage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="140dp"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/profile_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_button" />

        <TextView
            android:id="@+id/high_score"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:background="@null"
            android:gravity="center"
            android:text="@string/high_score"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/myQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="100dp"
        android:text="@string/category_text"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="24sp"/>

        <Button
            android:id="@+id/option_one_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/option_one_button" />

        <Button
            android:id="@+id/option_two_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/option_two_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="140dp">

            <Button
                android:id="@+id/option_three_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:text="@string/option_three_button" />

            <Button
                android:id="@+id/sign_out_button_question"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="220dp"
                android:text="@string/sign_out" />
        </LinearLayout>
</LinearLayout>