...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="MAIN MENU" />

        <Button
            android:id="@+id/sign_out_button_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="210dp"
            android:text="SIGN OUT" />
    </LinearLayout>
...
